# vulkan-study

./: .gitignore  CMakeLists.txt
framework/: CMakeLists.txt  allocated.cpp  allocated.h  buffer.h  builder_base.h  glsl_compiler.h  shader_module.cpp  shader_module.h  spirv_reflection.cpp  spirv_reflection.h  vk.h  vk_common.cpp  vk_common.h  vulkan_resource.h  vulkan_type_mapping.h
framework/common/: error.cpp  error.h  strings.cpp  strings.h
framework/filesystem/: filesystem.cpp  filesystem.hpp  legacy.cpp  std_filesystem.cpp  std_filesystem.hpp
lvk/: CMakeLists.txt  Texture.h  Vertex.h  allocator.cpp  allocator.h  buffer.h  descriptor.cpp  descriptor.h  device.cpp  device.h  draw_model.cpp  draw_model.h  draw_object.cpp  draw_object.h  feature_chain.cpp  feature_chain.h  functions.cpp  functions.h  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  pipeline_manager.cpp  pipeline_manager.h  render_context.cpp  render_context.h  simple_draw.h  swapchain.cpp  swapchain.h  system_info.cpp  texture_manager.cpp  texture_manager.h  vulkan_context.cpp  vulkan_context.h
shaders/: 22_shader_ubo.vert  26_shader_textures.frag  26_shader_textures.vert  shader.vert  textures.vert.spv  ubo.vert.spv
src/: HelloTriangle.cpp  HelloTriangle.h  LkDevice.cpp  LkDevice.h  LkInstance.cpp  LkInstance.h  LkSwapChain.cpp  LkSwapChain.h  VkInfo.cpp  VkInfo.h  functions.cpp  functions.h  instance.cpp  instance.h  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  physical_device.cpp  physical_device.h  render_context.cpp  render_context.h  simple_draw.cpp  swapchain.cpp  swapchain.h  system_info.h  vk.h  vulkan_context.cpp
